# FranklinCountyVoteOH

./: .gitignore  .htaccess  ANSWER_TO_YOUR_QUESTION.md  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCES.md  HOUSE_RACES_FEATURE.md  INSTALL.sh  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  README.md  SETUP.md  SHAPEFILES_DOWNLOADED.md  SHAPEFILE_DOWNLOAD_SUMMARY.md  WHERE_TO_PUT_XLSX_FILES.md  initialPrompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: project.yaml
data/raw/: README_SHAPEFILES.md  results_2018.csv  results_2018_house_cd-03.csv  results_2018_house_cd-12.csv  results_2018_house_cd-15.csv  results_2022.csv  results_2023_issue1.csv  results_2023_issue2.csv  results_2025_columbus_cd7.csv
docs/: 2008_PRECINCT_MATCHING.md  CD7_RACE_ANALYSIS.html  CD7_RACE_ANALYSIS.md  CD7_RACE_ANALYSIS_CONCISE.html  CD7_RACE_ANALYSIS_CONCISE.md  CENSUS_DEMOGRAPHICS.md  COLOR_SCHEME.md  FILE_ORGANIZATION.md  HOUSE_RACES.md  PREPROCESSING_RESULTS.md  QUICKSTART.md  WORKFLOW_SUMMARY.md  cd7_election_map.html  test.html
scripts/: aggregate_demographics_to_precincts.py  aggregate_tract_ethnicity_to_precincts.py  analyze_demographic_correlations.py  analyze_demographics_by_district.py  compare_2018_2024.py  compare_2023issue1_2024pres.py  create_council_district_chart.py  create_turnout_cartogram.py  deploy_webapp.sh  download_census_data.py  download_shapefiles.sh  download_shapefiles_curl.sh  download_shapefiles_python.py  download_tract_ethnicity_data.py  extract_turnout_2025.py  generate_cd7_interactive_map.py  generate_cd7_pdf_report.py  inspect_shapefiles.py  preprocess_results.py  run_pipeline.sh  test_interactive_maps.py
src/: __init__.py  cli.py  crosswalk.py  demo.py  harmonize.py  io_utils.py  metrics.py  visualize.py
tests/: __init__.py  conftest.py  test_crosswalk.py  test_harmonize.py  test_metrics.py
webapp/: README.md  app.py  race_metadata.yaml  start.sh
webapp/templates/: cartogram.html  cluster.html  index.html  (+1 more)
(+1 files in other folders)
